# Tic

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  HOW_TO_INSTALL.bat  INSTALL_COMPILER.md  Makefile  Player.cpp  Player.h  QUICKSTART.txt  README.md  build_and_run.bat  build_and_run.sh  create_portable.bat  git_commit.bat  main.cpp  run.bat  run.sh
